--- a/sign.html
+++ b/sign.html
@@ -387,7 +387,7 @@
 
 
 <script>
-    document.addEventListener('touchstart', {});
+    // document.addEventListener('touchstart', {});
     angular.module('NineYi.FreeTrial.SMS')
         .config(function (blockUIConfig) {
             // Change the default overlay message
