--- a/index.html
+++ b/index.html
@@ -2068,5 +2068,9 @@
         </div>
     </div>
 </div>
+<script>
+    var touchEventString = "<script>document.addEventListener('touchstart', {});<\/script>";
+    $("#mainframe").contents().find("body").append(scriptTag);
+</script>
 </body>
 </html>
