--- a/index.html
+++ b/index.html
@@ -2070,7 +2070,7 @@
 </div>
 <script>
     var touchEventString = "<script>document.addEventListener('touchstart', {});<\/script>";
-    $("#mainframe").contents().find("body").append(touchEventString);
+    jQuery("#mainframe").contents().find("body").append(touchEventString);
 </script>
 </body>
 </html>
