append iframe content

--- a/index.html
+++ b/index.html
@@ -2070,7 +2070,10 @@
 </div>
 <script>
     var touchEventString = "<script>document.addEventListener('touchstart', {});<\/script>";
-    jQuery("#mainframe").contents().find("body").append(touchEventString);
+    var $iframe = jQuery('#mainframe');
+    $iframe.ready(function() {
+        $iframe.contents().find("body").append(touchEventString);
+    });
 </script>
 </body>
 </html>
